--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -223,7 +223,7 @@
 
 				&.post-actions
 					font-size: 11px
-					margin: 5px 0 -18px 40px
+					margin: 5px 0 0 40px
 
 					a
 						color: #D67F00
@@ -243,7 +243,7 @@
 						margin: 0 0 0 40px
 
 					&:last-child .post-actions
-						margin-bottom: -18px
+						margin-bottom: -10px
 
 			.add-comment-button
 				float: right
